# BookingExperts

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  exceptions.py  main.py  service.py  utils.py
app/admin/: auth.py  views.py
app/booking/: models.py  router.py  schemas.py  service.py
app/hotel/: models.py  router.py  schemas.py  service.py
app/images/: router.py
app/migrations/: env.py
app/pages/: router.py
app/room/: models.py  router.py  schemas.py  service.py
app/static/css/: style.css
app/tasks/: celery.py  tasks.py
app/templates/: base.html  include-modal.html
app/templates/auth/: include-fields.html  include-script.html  login.html  register.html
app/templates/bookings/: bookings.html
app/templates/hotels/: hotels.html
app/templates/rooms/: rooms.html
app/tests/: conftest.py  mock_bookings.json  mock_hotels.json  mock_rooms.json  mock_users.json
app/tests/integration_tests/: test_booking_api.py  test_hotels_api.py  test_users_api.py
app/tests/unit_tests/: test_booking.py  test_hotels.py  test_users.py
app/user/: auth.py  dependencies.py  models.py  router.py  schemas.py  service.py
